Add jitter control loop and `JitterAwareStreamGrouping` (#8593)
* init

* allocate suppliers once

* improve jitter definition

* add documentation

* format

* format

* fix checkstyle

* fix RFC 1889 jitter definition, guarantee jitter decay if stable latency

* minor changes

* publish control signal based on ewma metrics

* fix typo on `ZeroOneOpenIntervalValidator`

* consume metrics and update internal status

* implement a cache for child tasks stats

* feedback message serialization and path decoupling

* feedback refactoring + JitterAwareStreamGrouping

* control loop lazy update

* send feedback according to a periodic tick tuple

* minor changes

* add jitter aware grouping topology bench

* remove not necessary UpstreamFeedbackCompareTopo.java

* remove unnecessary import, FT for registering FEEDBACK_TICK_STREAM

* `LoadAwareCustomStreamGrouping` contract backward compatibility

* unit test + fix FeedbackRecord

* refine jitter aware stream grouping algorithm

* review fixes

* security comment + FT scheduleUpstreamFeedbackTick in system components

* remove feedback stream default value

* Removes the lazy update logic to ensure fault tolerance in case a
parent worker dies. The impact on latency and throughput is negligible.

* two phases validation + `@CustomComboValidator` for `UpstreamFeedbackValidator`

* Refactor documentation to frame performance benchmarks neutrally, highlighting directional latency improvements under moderate load